--- a/client/src/style/footer.css
+++ b/client/src/style/footer.css
@@ -1,75 +1,89 @@
 .footer {
-  width: 100%;
-  position: absolute;
-  background-color: white;
-  height: 500px;
-  font-family: helveticaneuew10-65medi,helveticaneuew01-65medi,helveticaneuew02-65medi,sans-serif;
+  border-top: 1px solid #f0f1f2;
+  color: #43515c;
+  font-family: Madefor, Helvetica Neue, Helvetica, Arial, メイリオ, Meiryo, ヒラギノ角ゴ Pro W3, Hiragino Kaku Gothic Pro W3, Hiragino Kaku Gothic Pro, sans-serif !important;
+  font-size: 14px;
+  font-weight: 400;
+  overflow-x: hidden;
+  padding: 100px 0;
+  text-transform: none;
 }
 
 .footer_container {
-  margin-top: 30px;
-  font-weight: 700;
+  display: flex;
   justify-content: center;
-  align-items: center;
+  margin: 0 auto;
+  max-width: 1044px;
+  min-width: none;
+  width: 90%;
+}
+
+.footer_list {
   display: flex;
-  height: 70px;
-  width: 100%;
-  justify-content: space-evenly;
+  flex-grow: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.footer_discription {
-  display: flex;
-
+.footer_item {
+  box-sizing: border-box;
+  flex-grow: 1;
+  padding-right: 24px;
+  width: 25%;
 }
 
-.footer_text-container {
-  font-size: 14px;
-  font-family: 'HelveticaNeueW01-45Ligh', 'HelveticaNeueW02-45Ligh', 'HelveticaNeueW10-45Ligh', sans-serif;
-  width: 100%;
-  height: 300px;
+.footer_title {
+  color: #20303c;
+  font-family: Madefor, Helvetica Neue, Helvetica, Arial, メイリオ, Meiryo, ヒラギノ角ゴ Pro W3, Hiragino Kaku Gothic Pro W3, Hiragino Kaku Gothic Pro, sans-serif !important;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 24px;
+  margin-top: 0;
+  text-transform: uppercase;
 }
 
-.add_margin{
-  margin-left: 319px;
-}
-.add_margin2{
-  margin-left: 5px;
-}
-.add_margin3{
-  margin-right: 20px;
+.footer_item-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.footer_down {
+.footer_column {
+  word-wrap: break-word;
+  line-height: 2.5;
+}
+
+.footer_column-text {
   cursor: pointer;
-  width: 150px;
-  margin-top: 12px;
+  text-decoration: none;
+  color: #43515c;
 }
 
-.post_border {
-  width: 100%;
-  height: 1px;
-  background-color: grey;
-  opacity: .3;
+.footer_discription-container {
+  flex-grow: 0;
+  width: 260px;
 }
 
-.footer_border {
-  width: 80%;
-  height: 1px;
-  background-color: grey;
+.footer_logo {
+  background-image: url(../img/navbar/HORN_TEXTTOER.jpg);
+  background-repeat: no-repeat;
+  background-size: 92px 54px;
+  height: 54px;
+  margin: -22px 0 22px 0;
+  width: 102px;
 }
 
-.footer_img-container {
-  width: 100px;
-  background-color: aquamarine;
-  height: 100px;
-  position: relative;
-  top: -50px;
+.footer_text {
+  margin-left: 8px;
+  line-height: 24px;
 }
 
-.footer_img {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  background-image: url(../img/footer/imgonline-com-ua-Resize-YBFO4R7iPX0UtW9i.jpg); 
-  background-size: cover;
+.footer_icons {
+  list-style: none;
+  margin-left: 5px;
+  margin-top: 20px;
+  padding: 0;
+  text-align: center;
+  text-align: left;
 }
