--- a/client/src/style/subscriptions.css
+++ b/client/src/style/subscriptions.css
@@ -1,6 +1,7 @@
 .subscriptions {
   width: 100%;
-  height: 1900px;
+  height: 1600px;
+  margin-top: 7px;
 }
 
 .subscriptions_intro-container {
@@ -45,7 +46,7 @@
   color: white;
 }
 
-.subscriptions_plans-container{
+.subscriptions_plans-container {
   display: flex;
   margin-top: 25px;
   width: 672px;
@@ -63,7 +64,7 @@
   box-shadow: 0 4px 12px 0 rgb(122 43 43 / 10%), 0 7px 25px 0 rgb(80 52 52 / 10%), 0 0 0 1px rgb(146 122 122 / 5%);
 }
 
-.subscriptions_plan-right{
+.subscriptions_plan-right {
   width: 336px;
   height: 84px;
   display: flex;
@@ -98,12 +99,12 @@
   color: #aa4dc8;
   padding-top: 7px;
   font-size: 12px;
-  font-weight:600;
+  font-weight: 600;
   line-height: 15px;
   text-transform: uppercase;
 }
 
-.price{
+.price {
   width: 100%;
   height: 1500px;
   display: flex;
@@ -113,13 +114,16 @@
 .price_main-body {
   width: 1140px;
   height: 1500px;
-  border: 1px solid #dfe5eb;
+
 }
 
-.price_body{
+.price_body {
   width: 1140px;
   height: 222px;
   display: flex;
+  border-top: 1px solid #dfe5eb;
+  border-left: 1px solid #dfe5eb;
+  border-right: 1px solid #dfe5eb;
 }
 
 .price_container-1 {
@@ -158,7 +162,7 @@
 .price_text-down {
   font-size: 15px;
   text-align: center;
-} 
+}
 
 .add_for-text {
   padding-top: 15px;
@@ -194,9 +198,10 @@
 }
 
 .cost-1 {
- width: 53.97px;
- height: 58.66px;
+  width: 53.97px;
+  height: 58.66px;
 }
+
 .cost-2 {
   width: 60.06px;
   height: 58.66px;
@@ -205,6 +210,7 @@
   font-size: 36px;
   font-weight: 600;
 }
+
 .cost-container {
   width: 53.97px;
   height: 58.66px;
@@ -212,11 +218,13 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
 .cost_text-up {
   font-family: HelveticaNeueW01-75Bold, HelveticaNeueW02-75Bold, HelveticaNeueW10-75Bold;
   font-size: 17px;
   text-align: center;
 }
+
 .cost_text-down {
   font-family: HelveticaNeueW01-75Bold, HelveticaNeueW02-75Bold, HelveticaNeueW10-75Bold;
   font-size: 18px;
@@ -225,7 +233,8 @@
 
 .list {
   width: 100%;
-  height: 100%;
+  height: 625px;
+  border: 1px solid #dfe5eb;
 }
 
 .list-container-1 {
@@ -254,9 +263,38 @@
   border-left: 1px solid #dfe5eb;
 }
 
-span:after {
-  content: '\2713';
+.tick-mark {
+  position: relative;
+  display: inline-block;
+  width: 13px;
+  height: 14px;
 }
+
+.tick-mark::before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 50%;
+  width: 3px;
+  background-color: black;
+  content: "";
+  transform: translateX(10px) rotate(-45deg);
+  transform-origin: left bottom;
+}
+
+.tick-mark::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 100%;
+  background-color: black;
+  ;
+  content: "";
+  transform: translateX(10px) rotate(-45deg);
+  transform-origin: left bottom;
+}
+
 
 .list_block-line {
   width: 11px;
@@ -267,4 +305,49 @@ span:after {
 
 .add_border {
   border-top: 1px solid #dfe5eb;
+}
+
+/* Business Plan */
+
+.business_plan {
+  margin: 36px 0 30px;
+  padding: 48px;
+  display: flex;
+  justify-content: center;
+  background-image: linear-gradient(224deg, #f7f8fa, #f2f3ff);
+  background-size: cover;
+  border-radius: 6px;
+  height: 228px;
+}
+
+.business_plan-contaner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: var(--wsr-font-family, HelveticaNeueW01-65Medi, HelveticaNeueW02-65Medi, HelveticaNeueW10-65Medi), "Helvetica Neue", "Helvetica", "Arial", "\30E1\30A4\30EA\30AA", "meiryo", "\30D2\30E9\30AE\30CE\89D2\30B4 pro w3", "hiragino kaku gothic pro", "sans-serif";
+}
+
+.business_plan-text-up {
+  font-weight: 700;
+  font-size: 22px;
+  margin: 0 0 6px;
+  line-height: 30px;
+}
+
+.business_plan-text-central {
+  display: block;
+  max-width: 738px;
+  margin: 0 0 24px;
+}
+
+.business_plan-text-down {
+  font-size: 16px;
+  font-weight: 700;
+  color: #0084ff;
+}
+
+.business_plan-description {
+  font-size: 12px;
+  line-height: 15px;
+  font-family: var(--wsr-font-family, HelveticaNeueW01-55Roma, HelveticaNeueW02-55Roma, HelveticaNeueW10-55Roma), "Helvetica Neue", "Helvetica", "Arial", "\30E1\30A4\30EA\30AA", "meiryo", "\30D2\30E9\30AE\30CE\89D2\30B4 pro w3", "hiragino kaku gothic pro", "sans-serif";
 }
