--- a/client/src/style/templates.css
+++ b/client/src/style/templates.css
@@ -1,11 +1,14 @@
 .templates {
   width: 100%;
-  height: 1400px;
+  height: 2200px;
+  background: #f5f7f7;
 }
+
 /* {Intro} */
 .templates_intro {
   width: 100%;
   height: 194px;
+  background: white;
 }
 
 .templates_intro-container {
@@ -16,13 +19,13 @@
   margin-left: 97px;
 }
 
-.templates_intro-text{
+.templates_intro-text {
   width: 75%;
   font-size: 30px;
-  font-family: Madefor,Helvetica Neue,Helvetica,Arial,メイリオ,meiryo,ヒラギノ角ゴ pro w3,hiragino kaku gothic pro,sans-serif;
+  font-family: Madefor, Helvetica Neue, Helvetica, Arial, メイリオ, meiryo, ヒラギノ角ゴ pro w3, hiragino kaku gothic pro, sans-serif;
   font-weight: 700;
   text-align: left;
-  transition: font-size 333ms cubic-bezier(.25,1,.5,1);
+  transition: font-size 333ms cubic-bezier(.25, 1, .5, 1);
   margin: 0 54px 0 0;
 }
 
@@ -58,8 +61,9 @@
   margin-bottom: 3px;
   margin-left: 10px;
 }
+
 /* {BORDER} */
-.templates_border{
+.templates_border {
   width: 100%;
   background-color: grey;
   height: 1px;
@@ -70,16 +74,132 @@
   cursor: pointer;
 }
 
-.templates_border-buttons{
+.templates_border-buttons {
   width: 100%;
   background-color: black;
   height: 1px;
   opacity: .1;
 }
+
 /* {Main body} */
 .template_main-body {
   width: 100%;
-  height: 100%;
+  height: 200px;
   background: #f5f7f7;
 }
 
+/* PATTERN */
+
+.pattern {
+  width: 100%;
+  height: 1650px;
+  display: flex;
+  justify-content: center;
+  background: #f5f7f7;
+}
+
+.pattern_container {
+  width: 94.3%;
+  height: 1200px;
+
+}
+
+.pattern_box {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.pattern_text {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.box {
+  width: 30%;
+  height: 310px;
+}
+
+.box-1 {
+  background-image: url(../img/templates/1.jpg);
+  background-size: cover;
+}
+
+.box-2 {
+  background-image: url(../img/templates/2.jpg);
+  background-size: cover;
+}
+
+.box-3 {
+  background-image: url(../img/templates/3.jpg);
+  background-size: cover;
+}
+
+.box-4 {
+  background-image: url(../img/templates/4.jpg);
+  background-size: cover;
+}
+
+.box-5 {
+  background-image: url(../img/templates/5.jpg);
+  background-size: cover;
+}
+
+.box-6 {
+  background-image: url(../img/templates/6.jpg);
+  background-size: cover;
+}
+
+.box-7 {
+  background-image: url(../img/templates/7.jpg);
+  background-size: cover;
+}
+
+.box-8 {
+  background-image: url(../img/templates/8.jpg);
+  background-size: cover;
+}
+
+.box-9 {
+  background-image: url(../img/templates/9.jpg);
+  background-size: cover;
+}
+
+.box-10 {
+  background-image: url(../img/templates/10.jpg);
+  background-size: cover;
+}
+
+.box-11 {
+  background-image: url(../img/templates/11.jpg);
+  background-size: cover;
+}
+
+.box-12 {
+  background-image: url(../img/templates/12.jpg);
+  background-size: cover;
+}
+
+.text {
+  width: 30%;
+  height: 90px;
+  padding-top: 25px;
+  font-family: Madefor, "Helvetica Neue", Helvetica, Arial, メイリオ, meiryo, "ヒラギノ角ゴ pro w3", "hiragino kaku gothic pro", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.pagination {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pagination_conteiner {
+  width: 30%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
