--- a/client/src/style/footer.css
+++ b/client/src/style/footer.css
@@ -66,12 +66,12 @@
 }
 
 .footer_logo {
-  background-image: url(../img/navbar/HORN_TEXTTOER.jpg);
+  background-image: url(../img/logo\ 2.png);
   background-repeat: no-repeat;
-  background-size: 92px 54px;
+  background-size: 140px 54px;
   height: 54px;
   margin: -22px 0 22px 0;
-  width: 102px;
+  width: 140px;
 }
 
 .footer_text {
