--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -22,19 +22,21 @@
 }
 
 .logo_container {
-  width: 100px;
+  width: 120px;
   height: 40px;
 
   text-decoration: none;
-  color: black;
+  color: red;
   font-size: 30px;
   font-weight: 600;
-  margin: 22px 60px;
+  margin: 17px 60px;
+  background: url(../img/logo\ 2.png) no-repeat center;
+  background-size: cover;
 }
 
 .navigarion_container {
   width: 540px;
-  margin-top: 30px;
+  margin-top: 35px;
   display: flex;
   justify-content: space-around;
 }
