--- a/client/src/templates/pages/Aksesoria/style/bags.css
+++ b/client/src/templates/pages/Aksesoria/style/bags.css
@@ -79,7 +79,7 @@
 .log-icon {
     width: 20px;
     height: 20px;
-    background: url(../img/bages/log-icon.png) no-repeat center;
+    background: url(../img/bags/log-icon.png) no-repeat center;
     background-size: cover;
     position: relative;
     top: 11px;
@@ -112,7 +112,7 @@
     top: 36px;
     left: 10px;
     height: 24px;
-    background: url(../img/bages/shopping-basket-64.png) no-repeat center;
+    background: url(../img/bags/shopping-basket-64.png) no-repeat center;
     background-size: cover;
     cursor: pointer;
     filter: invert(86%) sepia(6%) saturate(143%) hue-rotate(314deg) brightness(88%) contrast(0%);
@@ -262,7 +262,7 @@
 }
 
 .png-transp {
-    background: url(../img/bages/search.png) no-repeat center;
+    background: url(../img/bags/search.png) no-repeat center;
     background-size: cover;
     z-index: 5;
     width: 22px;
@@ -279,7 +279,7 @@
 .front-img {
     height: 906px;
     width: 100%;
-    background: url(../img/bages/84770f_93b300330b3742f2b1948ef292a91f27_mv2_d_1920_1279_s_2.webp) no-repeat center;
+    background: url(../img/bags/84770f_93b300330b3742f2b1948ef292a91f27_mv2_d_1920_1279_s_2.webp) no-repeat center;
     background-size: cover;
 }
 
@@ -339,7 +339,7 @@
     width: 35px;
     height: 35px;
     margin-top: 15px;
-    background: url(../img/bages/facebook.webp) no-repeat center;
+    background: url(../img/bags/facebook.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
 }
@@ -348,7 +348,7 @@
     width: 35px;
     height: 35px;
     margin-top: 15px;
-    background: url(../img/bages/youtube.webp) no-repeat center;
+    background: url(../img/bags/youtube.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
 }
@@ -357,7 +357,7 @@
     width: 35px;
     height: 35px;
     margin-top: 15px;
-    background: url(../img/bages/instagram.webp) no-repeat center;
+    background: url(../img/bags/instagram.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
 }
@@ -380,7 +380,7 @@
 .bag {
     width: 50%;
     height: 806px;
-    background: url(../img/bages/bag.webp) no-repeat center;
+    background: url(../img/bags/bag.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
 }
@@ -420,7 +420,7 @@
 .backpacks {
     width: 33.3%;
     height: 633px;
-    background: url(../img/bages/backpacks.webp) no-repeat center;
+    background: url(../img/bags/backpacks.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
     background-size: 100%;
@@ -436,7 +436,7 @@
 .duffle-bags {
     width: 33.33%;
     height: 633px;
-    background: url(../img/bages/duffle-bags.webp) no-repeat center;
+    background: url(../img/bags/duffle-bags.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
     background-size: 100%;
@@ -452,7 +452,7 @@
 .travel-packs {
     width: 33.33%;
     height: 633px;
-    background: url(../img/bages/travel-packs.webp) no-repeat center;
+    background: url(../img/bags/travel-packs.webp) no-repeat center;
     background-size: cover;
     cursor: pointer;
     background-size: 100%;
@@ -528,7 +528,7 @@
 .bag-1 {
     width: 100%;
     height: 345px;
-    background: url(../img/bages/bag-1.webp) no-repeat center;
+    background: url(../img/bags/bag-1.webp) no-repeat center;
     background-size: cover;
 }
 
@@ -587,14 +587,14 @@
 .bag-2 {
     width: 100%;
     height: 345px;
-    background: url(../img/bages/bag-2.webp) no-repeat center;
+    background: url(../img/bags/bag-2.webp) no-repeat center;
 
 }
 
 .bag-3 {
     width: 100%;
     height: 343px;
-    background: url(../img/bages/bag-3.webp) no-repeat center;
+    background: url(../img/bags/bag-3.webp) no-repeat center;
 }
 
 /*DESERT*/
@@ -602,7 +602,7 @@
 .desert {
     width: 100%;
     height: 730px;
-    background: url(../img/bages/desert.webp)no-repeat center;
+    background: url(../img/bags/desert.webp)no-repeat center;
     background-size: cover;
 }
 
