--- a/client/src/style/templates.css
+++ b/client/src/style/templates.css
@@ -42,7 +42,17 @@
   justify-content: space-between;
   display: flex;
   height: 54px;
+  position: relative;
 }
+
+.templates_buttons .submenu {
+  height: 200px;
+  width: 100px;
+  background: green;
+  position: absolute;
+  cursor: pointer;
+}
+
 
 .templates_border-search {
   width: 100%;
@@ -117,65 +127,73 @@
 .box {
   width: 30%;
   height: 310px;
+  position: relative;
+}
+
+.box_component {
+  width: 100%;
+  height: 76px;
+  position: absolute;
+  bottom: 0;
 }
 
 .box-1 {
-  background-image: url(../img/templates/1.jpg);
+  background-image: url(../img/templates/t1.jpg);
   background-size: cover;
 }
 
 .box-2 {
-  background-image: url(../img/templates/2.jpg);
+  background-image: url(../img/templates/t2.jpg);
   background-size: cover;
 }
 
 .box-3 {
-  background-image: url(../img/templates/3.jpg);
+  background-image: url(../img/templates/t3.jpg);
   background-size: cover;
 }
 
 .box-4 {
-  background-image: url(../img/templates/4.jpg);
+  background-image: url(../img/templates/t4.jpg);
   background-size: cover;
 }
 
 .box-5 {
-  background-image: url(../img/templates/5.jpg);
+  background-image: url(../img/templates/t5.jpg);
   background-size: cover;
 }
 
 .box-6 {
-  background-image: url(../img/templates/6.jpg);
+  background-image: url(../img/templates/t6.jpg);
   background-size: cover;
 }
 
 .box-7 {
-  background-image: url(../img/templates/7.jpg);
+  background-image: url(../img/templates/t7.jpg);
   background-size: cover;
 }
 
 .box-8 {
-  background-image: url(../img/templates/8.jpg);
+  background-image: url(../img/templates/t8.jpg);
   background-size: cover;
 }
 
 .box-9 {
-  background-image: url(../img/templates/9.jpg);
+  background-image: url(../img/templates/t9.jpg);
   background-size: cover;
 }
 
 .box-10 {
-  background-image: url(../img/templates/10.jpg);
+  background-image: url(../img/templates/t10.jpg);
   background-size: cover;
 }
 
 .box-11 {
-  background-image: url(../img/templates/11.jpg);
+  background-image: url(../img/templates/t11.jpg);
   background-size: cover;
 }
 
 .box-12 {
-  background-image: url(../img/templates/12.jpg);
+  background-image: url(../img/templates/t12.jpg);
   background-size: cover;
 }
 
@@ -183,9 +201,9 @@
   width: 30%;
   height: 90px;
   padding-top: 25px;
-  font-family: Madefor, "Helvetica Neue", Helvetica, Arial, メイリオ, meiryo, "ヒラギノ角ゴ pro w3", "hiragino kaku gothic pro", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
+  font-family: 'Ibarra Real Nova', 'italic' serif;
+  font-size: 22px;
+  font-weight: 700;
 }
 
 .pagination {
@@ -203,3 +221,8 @@
   align-items: center;
   justify-content: center;
 }
+
+.box_path-settings {
+  text-decoration: none;
+}
+
