--- a/client/src/style/footer.css
+++ b/client/src/style/footer.css
@@ -31,6 +31,8 @@
   flex-grow: 1;
   padding-right: 24px;
   width: 25%;
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
 
 .footer_title {
@@ -41,24 +43,51 @@
   margin-bottom: 24px;
   margin-top: 0;
   text-transform: uppercase;
+
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .footer_item-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+  display: block;
 }
 
 .footer_column {
   word-wrap: break-word;
   line-height: 2.5;
+
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
 
-.footer_column-text {
+.footer_column-text-active {
   cursor: pointer;
   text-decoration: none;
   color: #43515c;
 }
+
+.footer_column-text-disable{
+  cursor: pointer; 
+  text-decoration: none;
+  color: grey;
+}
+
+.footer_column-text:hover {
+  cursor: pointer;
+  text-decoration: none;
+  color: #0c6efc;
+}
+
+
 
 .footer_discription-container {
   flex-grow: 0;
