--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -36,7 +36,7 @@
 
 .navigarion_container {
   width: 540px;
-  margin-top: 35px;
+  margin-top: 34px;
   display: flex;
   justify-content: space-around;
 }
@@ -45,15 +45,13 @@
   text-decoration: none;
   cursor: pointer;
   color: black;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
 }
 
 .menu_text:hover {
   color: blue;
 }
-
-/* .navigarion_container:hover {
-  color: rgb(0, 45, 248);
-} */
 
 /* <---rigth_container--> */
 
@@ -78,9 +76,3 @@
   height: 1px;
   opacity: .2;
 }
-
-/* @media (max-width: 945px) {
-  .navbar_button {
-    visibility: hidden;
-  }
-} */
