--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -32,7 +32,7 @@ hr {
 }
 
 .main_container {
-  background-color: rgb(28, 40, 96);
+  background-color: #14348E;
 }
 
 .main_information-container {
