--- a/client/src/style/subscriptions.css
+++ b/client/src/style/subscriptions.css
@@ -1,7 +1,6 @@
 .subscriptions {
   width: 100%;
-  height: 1600px;
-  margin-top: 7px;
+  height: 1600px; 
 }
 
 .subscriptions_intro-container {
@@ -10,12 +9,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #E8EAFF;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6)
 }
 
 .subscriptions_main-text {
   margin-top: 40px;
-  color: rgb(22, 45, 61);
+  color: #fff;
   display: inline;
   font-family: HelveticaNeueW01-65Medi, HelveticaNeueW02-65Medi, HelveticaNeueW10-65Medi, "Helvetica Neue", Helvetica, Arial, メイリオ, meiryo, "ヒラギノ角ゴ pro w3", "hiragino kaku gothic pro", "sans-serif";
   font-size: 30px;
@@ -26,7 +25,7 @@
 
 .subscriptions_discription-text {
   width: 600px;
-  color: rgb(22, 45, 61);
+  color: #fff;
   display: inline;
   font-family: HelveticaNeueW01-55Roma, HelveticaNeueW02-55Roma, HelveticaNeueW10-55Roma, "Helvetica Neue", Helvetica, Arial, メイリオ, meiryo, "ヒラギノ角ゴ pro w3", "hiragino kaku gothic pro", "sans-serif";
   font-size: 20px;
